// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders GisidaWrapper correctly renders map component with tasks 1`] = `
<MapComponent
  handlers={Array []}
  mapId="map-1"
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
/>
`;

exports[`renders GisidaWrapper correctly renders map component without tasks 1`] = `
<GisidaWrapper
  currentGoal={null}
  geoData={
    Object {
      "geojson": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              Array [
                101.166915893555,
                15.0715019595332,
              ],
              Array [
                101.165628433228,
                15.069429992157,
              ],
              Array [
                101.164855957031,
                15.0649130333519,
              ],
              Array [
                101.164898872375,
                15.061473449978,
              ],
              Array [
                101.165843009949,
                15.0585311116698,
              ],
              Array [
                101.168718338013,
                15.0577022766384,
              ],
              Array [
                101.173524856567,
                15.0577437184666,
              ],
              Array [
                101.179447174072,
                15.0583653449216,
              ],
              Array [
                101.183996200562,
                15.0589455279759,
              ],
              Array [
                101.189103126526,
                15.0597743581685,
              ],
              Array [
                101.191892623901,
                15.0629238834779,
              ],
              Array [
                101.191549301147,
                15.0671093647448,
              ],
              Array [
                101.19086265564,
                15.0727036913665,
              ],
              Array [
                101.190605163574,
                15.0748170653661,
              ],
              Array [
                101.188631057739,
                15.0768061040682,
              ],
              Array [
                101.185412406921,
                15.0769304183694,
              ],
              Array [
                101.182150840759,
                15.0772619228176,
              ],
              Array [
                101.177172660828,
                15.0780906816776,
              ],
              Array [
                101.174211502075,
                15.0777591785211,
              ],
              Array [
                101.172151565552,
                15.0765989134045,
              ],
              Array [
                101.168503761292,
                15.0753557651845,
              ],
              Array [
                101.166915893555,
                15.0715019595332,
              ],
            ],
          ],
          "type": "Polygon",
        },
        "id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
        "properties": Object {
          "jurisdiction_name": "TLv1_01",
          "jurisdiction_parent_id": "dad42fa6-b9b8-4658-bf25-bfa7ab5b16ae",
        },
        "type": "Feature",
      },
      "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
    }
  }
  goal={
    Array [
      Object {
        "action_code": "Case Confirmation",
        "completed_task_count": 0,
        "goal_comparator": "=",
        "goal_id": "Case_Confirmation",
        "goal_unit": "each",
        "goal_value": 1,
        "id": "5a27ec10-7a5f-563c-ba11-4de150b336af",
        "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
        "measure": "Case confirmation complete",
        "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
        "task_business_status_map": Object {},
        "task_count": 0,
      },
      Object {
        "action_code": "Larval Dipping",
        "completed_task_count": 0,
        "goal_comparator": ">=",
        "goal_id": "Larval_Dipping_Min_3_Sites",
        "goal_unit": "each",
        "goal_value": 3,
        "id": "f8d4e0a9-5867-5c78-9e26-de45d72556c4",
        "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
        "measure": "Number of larval dipping activities",
        "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
        "task_business_status_map": Object {
          "Not Visited": 2,
        },
        "task_count": 2,
      },
      Object {
        "action_code": "Blood Screening",
        "completed_task_count": 0,
        "goal_comparator": "=",
        "goal_id": "RACD_blood_screening_1km_radius",
        "goal_unit": "percent",
        "goal_value": 100,
        "id": "19b86421-3cb2-5698-9f11-c1bdafbe5e6d",
        "jurisdiction_id": "1337",
        "measure": "Percent of registered people tested",
        "plan_id": "1337",
        "task_business_status_map": Object {},
        "task_count": 0,
      },
      Object {
        "action_code": "Mosquito Collection",
        "completed_task_count": 3,
        "goal_comparator": ">=",
        "goal_id": "Mosquito_Collection_Min_3_Traps",
        "goal_unit": "traps",
        "goal_value": 3,
        "id": "0f03cef6-1654-5bba-8898-1d2a8000e5b1",
        "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
        "measure": "Number of mosquito collection traps",
        "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
        "task_business_status_map": Object {
          "Complete": 3,
          "In Progress": 3,
          "Incomplete": 1,
          "Not Eligible": 6,
          "Not Visited": 5,
        },
        "task_count": 18,
      },
      Object {
        "action_code": "Bednet Distribution",
        "completed_task_count": 4,
        "goal_comparator": ">=",
        "goal_id": "RACD_bednet_dist_1km_radius",
        "goal_unit": "percent",
        "goal_value": 100,
        "id": "e50f7156-c80e-541e-a24c-0b3e0d95b868",
        "jurisdiction_id": "304cbcd4-0850-404a-a8b1-486b02f7b84d",
        "measure": "Percent of residential structures visited",
        "plan_id": "89fh38sg-h83s-9xf2-a7h2-pl98dh320lbc",
        "task_business_status_map": Object {
          "Complete": 4,
          "Not Visited": 11,
        },
        "task_count": 15,
      },
    ]
  }
  handlers={Array []}
  tasks={null}
>
  <Ripple
    borderColor="#ff5d00"
    borderStyle="solid"
    borderWidth="4px"
    height="64px"
    minHeight="80vh"
    width="64px"
  >
    <div
      className="lds-ripple-parent"
      style={
        Object {
          "minHeight": "80vh",
        }
      }
    >
      <div
        className="lds-ripple"
        style={
          Object {
            "height": "64px",
            "width": "64px",
          }
        }
      >
        <div
          style={
            Object {
              "borderColor": "#ff5d00",
              "borderStyle": "solid",
              "borderWidth": "4px",
            }
          }
        />
        <div
          style={
            Object {
              "borderColor": "#ff5d00",
              "borderStyle": "solid",
              "borderWidth": "4px",
            }
          }
        />
      </div>
    </div>
  </Ripple>
</GisidaWrapper>
`;

exports[`renders GisidaWrapper correctly renders map component without tasks 2`] = `
<GisidaWrapper
  currentGoal={null}
  geoData={
    Object {
      "geojson": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              Array [
                101.166915893555,
                15.0715019595332,
              ],
              Array [
                101.165628433228,
                15.069429992157,
              ],
              Array [
                101.164855957031,
                15.0649130333519,
              ],
              Array [
                101.164898872375,
                15.061473449978,
              ],
              Array [
                101.165843009949,
                15.0585311116698,
              ],
              Array [
                101.168718338013,
                15.0577022766384,
              ],
              Array [
                101.173524856567,
                15.0577437184666,
              ],
              Array [
                101.179447174072,
                15.0583653449216,
              ],
              Array [
                101.183996200562,
                15.0589455279759,
              ],
              Array [
                101.189103126526,
                15.0597743581685,
              ],
              Array [
                101.191892623901,
                15.0629238834779,
              ],
              Array [
                101.191549301147,
                15.0671093647448,
              ],
              Array [
                101.19086265564,
                15.0727036913665,
              ],
              Array [
                101.190605163574,
                15.0748170653661,
              ],
              Array [
                101.188631057739,
                15.0768061040682,
              ],
              Array [
                101.185412406921,
                15.0769304183694,
              ],
              Array [
                101.182150840759,
                15.0772619228176,
              ],
              Array [
                101.177172660828,
                15.0780906816776,
              ],
              Array [
                101.174211502075,
                15.0777591785211,
              ],
              Array [
                101.172151565552,
                15.0765989134045,
              ],
              Array [
                101.168503761292,
                15.0753557651845,
              ],
              Array [
                101.166915893555,
                15.0715019595332,
              ],
            ],
          ],
          "type": "Polygon",
        },
        "id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
        "properties": Object {
          "jurisdiction_name": "TLv1_01",
          "jurisdiction_parent_id": "dad42fa6-b9b8-4658-bf25-bfa7ab5b16ae",
        },
        "type": "Feature",
      },
      "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
    }
  }
  goal={
    Array [
      Object {
        "action_code": "Case Confirmation",
        "completed_task_count": 0,
        "goal_comparator": "=",
        "goal_id": "Case_Confirmation",
        "goal_unit": "each",
        "goal_value": 1,
        "id": "5a27ec10-7a5f-563c-ba11-4de150b336af",
        "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
        "measure": "Case confirmation complete",
        "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
        "task_business_status_map": Object {},
        "task_count": 0,
      },
      Object {
        "action_code": "Larval Dipping",
        "completed_task_count": 0,
        "goal_comparator": ">=",
        "goal_id": "Larval_Dipping_Min_3_Sites",
        "goal_unit": "each",
        "goal_value": 3,
        "id": "f8d4e0a9-5867-5c78-9e26-de45d72556c4",
        "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
        "measure": "Number of larval dipping activities",
        "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
        "task_business_status_map": Object {
          "Not Visited": 2,
        },
        "task_count": 2,
      },
      Object {
        "action_code": "Blood Screening",
        "completed_task_count": 0,
        "goal_comparator": "=",
        "goal_id": "RACD_blood_screening_1km_radius",
        "goal_unit": "percent",
        "goal_value": 100,
        "id": "19b86421-3cb2-5698-9f11-c1bdafbe5e6d",
        "jurisdiction_id": "1337",
        "measure": "Percent of registered people tested",
        "plan_id": "1337",
        "task_business_status_map": Object {},
        "task_count": 0,
      },
      Object {
        "action_code": "Mosquito Collection",
        "completed_task_count": 3,
        "goal_comparator": ">=",
        "goal_id": "Mosquito_Collection_Min_3_Traps",
        "goal_unit": "traps",
        "goal_value": 3,
        "id": "0f03cef6-1654-5bba-8898-1d2a8000e5b1",
        "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
        "measure": "Number of mosquito collection traps",
        "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
        "task_business_status_map": Object {
          "Complete": 3,
          "In Progress": 3,
          "Incomplete": 1,
          "Not Eligible": 6,
          "Not Visited": 5,
        },
        "task_count": 18,
      },
      Object {
        "action_code": "Bednet Distribution",
        "completed_task_count": 4,
        "goal_comparator": ">=",
        "goal_id": "RACD_bednet_dist_1km_radius",
        "goal_unit": "percent",
        "goal_value": 100,
        "id": "e50f7156-c80e-541e-a24c-0b3e0d95b868",
        "jurisdiction_id": "304cbcd4-0850-404a-a8b1-486b02f7b84d",
        "measure": "Percent of residential structures visited",
        "plan_id": "89fh38sg-h83s-9xf2-a7h2-pl98dh320lbc",
        "task_business_status_map": Object {
          "Complete": 4,
          "Not Visited": 11,
        },
        "task_count": 15,
      },
    ]
  }
  handlers={Array []}
  tasks={null}
>
  <MapComponent
    handlers={Array []}
    mapId="map-1"
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <div>
      I love oov
    </div>
  </MapComponent>
</GisidaWrapper>
`;

exports[`renders GisidaWrapper correctly renders map component without tasks 3`] = `
Object {
  "handlers": Array [],
  "mapId": "map-1",
  "store": Object {
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
    Symbol(observable): [Function],
  },
}
`;
